--- a/html/index.html
+++ b/html/index.html
@@ -102,6 +102,13 @@
                 if (args[0] == "install_package") {
                     const installedPath = args[1];
                     engineWorker.postMessage(["start_engine_with_path", installedPath]);
+                    setTimeout(() => engineWorker.postMessage(["send_command", "9"]), 5 * 1000); // to quit automatically
+                }
+            }
+            if (ev.data[0] == "engineEvent") {
+                const args = ev.data[1]
+                if (args[0] == "notifyQuit") {
+                    setTimeout(() => engineWorker.postMessage(["run_engine_worker"]), 3 * 1000); // to restart application.
                 }
             }
         }
