--- a/html/index.html
+++ b/html/index.html
@@ -101,7 +101,19 @@
                 const args = ev.data[1];
                 if (args[0] == "install_package") {
                     const installedPath = args[1];
-                    engineWorker.postMessage(["start_engine_with_path", installedPath]);
+                    engineWorker.postMessage(["init_engine_with_path", installedPath]);
+                }
+            }
+            if (ev.data[0] == "methodError") {
+                const args = ev.data[1];
+                console.log("Error", args[0], args[1]);
+            }
+            if (ev.data[0] == "enginestatus") {
+                const args = ev.data[1];
+                if (args[0] == "engineInitOK") {
+                    engineWorker.postMessage(["set_viewsize", 100, 100]);
+                    engineWorker.postMessage(["set_textunit_px", 10, 10]);
+                    engineWorker.postMessage(["start_engine"]);
                     setTimeout(() => engineWorker.postMessage(["send_quit"]), 5 * 1000); // to quit automatically
                 }
             }
