main: fix MethodNotImplemented is raised at last listener only

--- a/html/index.html
+++ b/html/index.html
@@ -111,8 +111,9 @@
             if (ev.data[0] == "enginestatus") {
                 const args = ev.data[1];
                 if (args[0] == "engineInitOK") {
-                    engineWorker.postMessage(["set_viewsize", 100, 100]);
+                    engineWorker.postMessage(["set_viewsize", 50, 50]);
                     engineWorker.postMessage(["set_textunit_px", 10, 10]);
+                    engineWorker.postMessage(["not-implemented-method-demo"]);
                     engineWorker.postMessage(["start_engine"]);
                     setTimeout(() => engineWorker.postMessage(["send_quit"]), 5 * 1000); // to quit automatically
                 }
